# conflator

./: .gitignore  README.md  demo.py  pyproject.toml  requirements.txt  setup.py  test.py  tox.ini
.github/workflows/: cd.yml  ci.yaml  tox.yml
conflate/: __init__.py  conflate.py
conflator/: __init__.py  conflator.py
conflator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: dev.py  requirements_test.txt  test_cli_args.py  test_conflator_functions.py  test_env_var.py  test_load_conflator.py  test_nested_subclasses.py  test_no_cli.py  test_subclasses.py
