[tool.poetry]
name = "fast-config"
version = "0.1.0"
description = "Load small app configurations from environment variables, command line arguments and config files, according to a pydantic model."
authors = ["James Hawkes <James.Hawkes@ecmwf.int>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.3"
argparse = "^1.4.0"
rich-argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
