[tool.poetry]
name = "conflator"
version = "0.1.7"
description = "Load small app configurations from environment variables, command line arguments and config files, according to a pydantic model."
authors = ["James Hawkes <James.Hawkes@ecmwf.int>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/ecmwf/conflator/"

[tool.poetry.dependencies]
python = ">3.9"
pydantic = ">2.0"
rich-argparse = ">1.0"
pytest = ">8.0"
pyyaml = ">6.0"


[tool.poetry.group.dev.dependencies]
mypy = ">1.8.0"
ruff = ">0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
lint.extend-select = ["I"]

[tool.black]
line-length = 120
